# OakdOpenCV

./: CMakeLists.txt  build.sh  env_build.sh  readme.md
src/: main.cpp  util.cpp  util.hpp  videodraft.cpp
